# PyQtPath

./: .bumpversion.toml  .gitignore  README.md  pyproject.toml  requirements.txt  upload_to_pipy.sh
docs/uml/: str_activity.puml  traverse_activity.puml
src/PyQtPath/: path_chain_pyqt6.py  path_str_pyqt6.py  pyqt6_path.py
tests/: conftest.py
tests/PyQtPath/: get_widget_iterative_function_2_test.py  path_chain_pyqt6_test.py  path_str_pyqt6_test.py  pyqt6_path_test.py
