[project]
name = "PyQtPath"
version = "0.0.1"
authors = [
    { name = "Alexey Yablokov", email = "alex_ya@mailbox.org" }
]
description = "Retrieve PyQt widgets by path"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"